--- a/templates/agregar.html
+++ b/templates/agregar.html
@@ -3,19 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <title>Agregar Contraseña</title>
+    <style>
+        .form_main {
+            width: 220px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: rgb(255, 255, 255);
+            padding: 30px;
+            box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.062);
+            position: relative;
+            overflow: hidden;
+            margin: 0 auto;
+            margin-top: 50px;
+        }
+
+        .form_main::before {
+            position: absolute;
+            content: "";
+            width: 300px;
+            height: 300px;
+            background-color: rgb(209, 193, 255);
+            transform: rotate(45deg);
+            left: -180px;
+            bottom: 30px;
+            z-index: 1;
+            border-radius: 30px;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.082);
+        }
+
+        .heading {
+            font-size: 2em;
+            color: #2e2e2e;
+            font-weight: 700;
+            margin: 5px 0 10px 0;
+            z-index: 2;
+        }
+
+        .inputContainer {
+            width: 100%;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 2;
+        }
+
+        .inputIcon {
+            position: absolute;
+            left: 3px;
+        }
+
+        .inputField {
+            width: 100%;
+            height: 30px;
+            background-color: transparent;
+            border: none;
+            border-bottom: 2px solid rgb(173, 173, 173);
+            margin: 10px 0;
+            color: black;
+            font-size: .8em;
+            font-weight: 500;
+            box-sizing: border-box;
+            padding-left: 30px;
+        }
+
+        .inputField:focus {
+            outline: none;
+            border-bottom: 2px solid rgb(199, 114, 255);
+        }
+
+        .inputField::placeholder {
+            color: rgb(80, 80, 80);
+            font-size: 1em;
+            font-weight: 500;
+        }
+
+        #button {
+            z-index: 2;
+            position: relative;
+            width: 100%;
+            border: none;
+            background-color: rgb(162, 104, 255);
+            height: 30px;
+            color: white;
+            font-size: .8em;
+            font-weight: 500;
+            letter-spacing: 1px;
+            margin: 10px;
+            cursor: pointer;
+        }
+
+        #button:hover {
+            background-color: rgb(126, 84, 255);
+        }
+
+        .forgotLink {
+            z-index: 2;
+            font-size: .7em;
+            font-weight: 500;
+            color: rgb(44, 24, 128);
+            text-decoration: none;
+            padding: 8px 15px;
+            border-radius: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Agregar Contraseña</h1>
-    <form action="/agregar" method="post">
-        <label for="servicio">Servicio:</label>
-        <input type="text" id="servicio" name="servicio" required><br><br>
-        <label for="usuario">Usuario:</label>
-        <input type="text" id="usuario" name="usuario" required><br><br>
-        <label for="contrasena">Contraseña:</label>
-        <input type="password" id="contrasena" name="contrasena" required><br><br>
-        <input type="submit" value="Guardar">
-    </form>
-    <br>
-    <a href="/">Volver a inicio</a>
+    <div class="form_main">
+        <h1 class="heading">Agregar Contraseña</h1>
+        <form action="/agregar" method="post">
+            <div class="inputContainer">
+                <input type="text" id="servicio" name="servicio" class="inputField" placeholder="Servicio" required>
+            </div>
+            <div class="inputContainer">
+                <input type="text" id="usuario" name="usuario" class="inputField" placeholder="Usuario" required>
+            </div>
+            <div class="inputContainer">
+                <input type="password" id="contrasena" name="contrasena" class="inputField" placeholder="Contraseña" required>
+            </div>
+            <input type="submit" id="button" value="Guardar">
+        </form>
+        <br>
+        <a href="/" class="forgotLink">Volver a inicio</a>
+    </div>
 </body>
 </html>
