--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <title>Gestor de Contraseñas</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: rgb(255, 255, 255);
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .main_container {
+            width: 400px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: rgb(255, 255, 255);
+            padding: 30px;
+            box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.062);
+            position: relative;
+            overflow: hidden;
+            margin-top: 50px;
+        }
+
+        .main_container::before {
+            position: absolute;
+            content: "";
+            width: 300px;
+            height: 300px;
+            background-color: rgb(209, 193, 255);
+            transform: rotate(45deg);
+            left: -180px;
+            bottom: 30px;
+            z-index: 1;
+            border-radius: 30px;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.082);
+        }
+
+        .heading {
+            font-size: 2em;
+            color: #2e2e2e;
+            font-weight: 700;
+            margin: 5px 0 20px 0;
+            z-index: 2;
+        }
+
+        .nav_list {
+            list-style-type: none;
+            padding: 0;
+            z-index: 2;
+        }
+
+        .nav_list li {
+            margin: 10px 0;
+        }
+
+        .nav_link {
+            font-size: 1em;
+            font-weight: 500;
+            color: rgb(44, 24, 128);
+            text-decoration: none;
+            padding: 8px 15px;
+            border-radius: 20px;
+            background-color: rgb(209, 193, 255);
+            transition: background-color 0.3s;
+        }
+
+        .nav_link:hover {
+            background-color: rgb(199, 114, 255);
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <h1>Gestor de Contraseñas</h1>
-    <ul>
-        <li><a href="/agregar.html">Agregar Contraseña</a></li>
-        <li><a href="/listar">Listar Contraseñas</a></li>
-    </ul>
+    <div class="main_container">
+        <h1 class="heading">Gestor de Contraseñas</h1>
+        <ul class="nav_list">
+            <li><a href="/agregar.html" class="nav_link">Agregar Contraseña</a></li>
+            <br>
+            <li><a href="/listar" class="nav_link">Listar Contraseñas</a></li>
+        </ul>
+    </div>
 </body>
 </html>
